2009-03-08  Marek Habersack  <mhabersack@novell.com>

	* configure.in: added detection of glib

2009-02-20  Marek Habersack  <mhabersack@novell.com>

	* configure.in: added --with-debug-level to set the DEBUG_PRINT
	output level.
	Removed Apache 1.3 support.

	* AUTHORS, INSTALL, README: updated

2009-02-16  Marek Habersack  <mhabersack@novell.com>

	* src/mod_mono.c (fork_mod_mono_server): unblock the signals Mono
	needs (SIGPWR, SIGXCPU, 33, 35) just before executing the
	backend. It appears that some versions of Apache block signals and
	Mono uses the above in the runtime and in the GC. As the result of
	those signals being blocked, the forked backend would lock up as
	soon as GC would start collecting. Thanks to Zoltan Varga for
	noticing that the signals are blocked. Fixes bug #472732

2009-01-21 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* src/mod_mono.c: redirect stdout to null when not in debug mode. Now
	we can write large amounts of text to the console without slowing down
	mod_mono.

2009-01-08  Marek Habersack  <mhabersack@novell.com>

	* configure.in: added the --with-remove-display configure
	parameter to enable removing of the DISPLAY variable
	from the mod-mono-server backend's environment. Fixes bug #464225

	* src/mod_mono.c (fork_mod_mono_server): remove the DISPLAY
	variable from the child process environment if mod_mono was
	compiled with REMOVE_DISPLAY defined. Fixes bug #464225

2008-10-27 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* src/mod_mono.c: hush warnings.

2008-09-25  Joshua Tauberer  <jit@occams.info>

	* src/mod_mono.c: Typo in error message "droping" now "dropping".

2008-09-22  Juraj Skripsky  <js@hotfeet.ch>

	* mod_mono.conf.in: Add new file types (as registered in
	/etc/mono/2.0/web.config).

2008-07-14  Joshua Tauberer  <jit@occams.info>

	* src/mod_mono.c: Always acquire a lock at the start of processing
	a request. The active requests counter function now assumes the